envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address: { socket_address: { address: 127.0.0.1, port_value: 9090 } }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          route_config:
            name: all_routes
            virtual_hosts:
            - name: xray
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: xray_backend }
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: xray_backend
    connect_timeout: 10s
    type: STATIC
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: xray_backend
      endpoints:
      - lb_endpoints:
        - endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 10000 } } }
